--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,4 @@ services:
     image: amazon/dynamodb-local:latest
     ports:
       - "8000:8000"
+    command: ["java", "-jar", "DynamoDBLocal.jar", "-inMemory"]
